Correctly select parent tweet. Disable RuboCop rule.

--- a/ruby/.rubocop.yml
+++ b/ruby/.rubocop.yml
@@ -10,3 +10,5 @@ Style/MultilineMethodCallIndentation:
   Enabled: false
 Style/RaiseArgs:
   Enabled: false
+Performance/Casecmp:
+  Enabled: false
